--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <h1>The Acme Users</h1>
     <button id="loadButton">Load Users</button>
     <button id="loadRandomButton">Load Random User</button>
+    <button id="loadCompaniesButton">Load Companies</button>
     <h1 id="randomH1"></h1>
     <ul id="usersList"></ul>
   </body>
